@@ -1,11 +1,12 @@
 import sys
 import os
-path = [ os.path.split(sys.argv[0])[0] ]
-print path
-path.extend(sys.path)
-sys.path = path
 import objc
 from AppKit import *
+from AppKit.NibClassBuilder import extractClasses
+
+extractClasses('MainMenu')
+extractClasses('ToDoDocument')
+extractClasses('ToDoInfoWindow')
 
 # Import all submodules,  to make sure all 
 # classes are known to the runtime
@@ -16,7 +17,5 @@ import ToDoCell
 import ToDoDocument
 import ToDoItem
 import TodoAppDelegate
-
-print objc.lookUpClass('ToDoDocument')
 
 NSApplicationMain(sys.argv)
